@@ -1,7 +1,6 @@
 package dte.desktobeauty;
 
 import static dte.desktobeauty.state.State.RUNNING;
-import static dte.desktobeauty.state.State.SETTING_SYSTEM_TRAY;
 import static java.util.stream.Collectors.toList;
 
 import java.awt.AWTException;
@@ -9,62 +8,44 @@ import java.awt.Desktop;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.List;
 
 import javax.imageio.ImageIO;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
+import com.machinezoo.noexception.Exceptions;
 import dte.desktobeauty.desktop.DesktopPicture;
-import dte.desktobeauty.elementselector.ElementSelector;
+import dte.desktobeauty.exceptions.PopupExceptionHandler;
+import dte.desktobeauty.pictureselector.PictureSelector;
 import dte.desktobeauty.state.State;
-import dte.desktobeauty.utils.FileUtils;
+import dte.desktobeauty.utils.AlertUtils;
 import dte.desktobeauty.utils.SystemTrayBuilder;
 import dte.desktobeauty.utils.TimeUtils;
 
 public class DesktoBeauty
 {
-	private static final Logger LOGGER = LogManager.getLogger(DesktoBeauty.class);
-	
-	private static final Path BACKGROUNDS_FOLDER_PATH = Path.of(System.getProperty("user.home"), "DesktoBeauty", "Desktop Backgrounds");
+	private static final Path BACKGROUNDS_FOLDER_PATH = Paths.get(System.getProperty("user.home"), "DesktoBeauty", "Desktop Backgrounds");
 
 	public static void main(String[] args) throws Exception
 	{
-		setGlobalExceptionLogger();
+		//init
+		Thread.setDefaultUncaughtExceptionHandler(new PopupExceptionHandler());
 		showSystemTray();
-		State.set(RUNNING);
 
+		//parse the arguments
 		Duration changeDelay = TimeUtils.parseDuration(args[0]);
-		ElementSelector<Path> pictureSelector = ElementSelector.fromName(args[1]);
+		PictureSelector pictureSelector = PictureSelector.fromName(args[1]);
 		List<Path> backgroundPictures = loadBackgroundPictures();
-		
-		LOGGER.info("Starting to change your Desktop's background every {}!", args[0]);
-		LOGGER.info("-~-Settings -~-");
-		LOGGER.info("» Backgrounds Amount: {}", backgroundPictures.size());
-		LOGGER.info("» Picture Selector: {}", pictureSelector.getName());
-		LOGGER.info("");
 
+		State.set(RUNNING);
+		
 		while(true) 
 		{
-			//wait before setting a new background picture
+			DesktopPicture.set(pictureSelector.selectFrom(backgroundPictures));
+
+			//wait before setting a new picture
 			Thread.sleep(changeDelay.toMillis());
-			
-			//select a picture
-			Path selectedPicture = pictureSelector.selectFrom(backgroundPictures);
-			
-			//set it & print the result(success or failure)
-			String pictureName = FileUtils.getNameWithoutExtension(selectedPicture);
-			
-			if(!DesktopPicture.isSupportedExtension(selectedPicture)) 
-			{
-				LOGGER.error("Failed to set the background to \"{}\" due to an unsupported extension! The allowed ones are: {}.", pictureName, String.join(", ", DesktopPicture.getAllowedExtensions()));
-				continue;
-			}
-			
-			DesktopPicture.set(selectedPicture);
-			LOGGER.info("New Background: \"{}\"", pictureName);
 		}
 	}
 
@@ -72,73 +53,40 @@ public class DesktoBeauty
 	{
 		if(Files.notExists(BACKGROUNDS_FOLDER_PATH))
 		{
-			LOGGER.info("Please wait while creating the Backgrounds Folder at \"{}\"...", BACKGROUNDS_FOLDER_PATH.toString());
 			Files.createDirectories(BACKGROUNDS_FOLDER_PATH);
-			LOGGER.info("Done!");
+			AlertUtils.error("Successfully created your Backgrounds Folder at:", BACKGROUNDS_FOLDER_PATH.toString(), " ", "Click on OK to open it.");
+			openBackgroundsFolder();
+			
 			System.exit(0);
 		}
 
-		List<Path> backgrounds = Files.list(BACKGROUNDS_FOLDER_PATH).collect(toList());
+		List<Path> backgrounds = Files.walk(BACKGROUNDS_FOLDER_PATH)
+				.filter(DesktopPicture::isSupportedExtension)
+				.collect(toList());
 
 		if(backgrounds.isEmpty())
 		{
-			LOGGER.error("The Backgrounds Folder is empty - You have to insert at least one background!");
+			AlertUtils.error("Your Backgrounds Folder is empty!", "You have to insert at least one background.", " ", "Opening...");
+			openBackgroundsFolder();
+			
 			System.exit(1);
 		}
 		
 		return backgrounds;
 	}
 
-	private static void setGlobalExceptionLogger() 
-	{
-		Thread.setDefaultUncaughtExceptionHandler((thread, throwable) -> 
-		{
-			State state = State.current();
-
-			switch(state) 
-			{
-			case RUNNING:
-				LOGGER.error("Error while switching a Background Picture", throwable);
-				break;
-
-			case SETTING_SYSTEM_TRAY:
-				String action = (throwable instanceof IOException ? "reading" : "displaying");
-
-				LOGGER.error("Error while {} the System-Tray's Image", action, throwable);
-				break;
-
-			default:
-				LOGGER.fatal("NO handler was defined to handle exceptions within the '{}' state! {}", state.name(), throwable);
-				System.exit(1);
-				break;
-			}
-		});
-	}
-
 	private static void showSystemTray() throws AWTException, IOException 
 	{
-		State.set(SETTING_SYSTEM_TRAY);
-
 		new SystemTrayBuilder()
 		.withTooltip("DesktoBeauty")
 		.withIcon(ImageIO.read(DesktoBeauty.class.getResource("/System Tray.png")))
-
-		//Open Main Folder
-		.withMenuItem("Open Backgrounds Folder", event ->
-		{
-			try 
-			{
-				Desktop.getDesktop().open(BACKGROUNDS_FOLDER_PATH.toFile());
-			} 
-			catch(IOException exception) 
-			{
-				LOGGER.error("Cannot open the backgrounds folder!", exception);
-			}
-		})
-
-		//Stop 
+		.withMenuItem("Open Backgrounds Folder", event -> openBackgroundsFolder())
 		.withMenuItem("Stop", event -> System.exit(0))
-
 		.display();
+	}
+	
+	private static void openBackgroundsFolder()
+	{
+		Exceptions.sneak().run(() -> Desktop.getDesktop().open(BACKGROUNDS_FOLDER_PATH.toFile()));
 	}
 }
